--- a/Exercise 4/index.html
+++ b/Exercise 4/index.html
@@ -23,117 +23,153 @@
             </div>
         </header>
         <main>
-            <section>
-                <div>
-                    <h2>Playthis playlist</h2>
-                </div>
-                <div>
-                    <article>
-                        <img src="" alt="">
-                    </article>
-                    <article>
-                        <h2></h2>
-                        <p><a href=""></a></p>
-                        <div>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </article>
-                </div>
-                <div>
-                    <article>
-                        <img src="" alt="">
-                    </article>
-                    <article>
-                        <h2></h2>
-                        <p></p>
-                        <div>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </article>
-                </div>
-                <div>
-                    <article>
-                        <img src="" alt="">
-                    </article>
-                    <article>
-                        <h2></h2>
-                        <p><a href=""></a></p>
-                        <button></button>
-                    </article>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <article>
-                        <img src="" alt="">
-                    </article>
-                    <article>
-                        <h2></h2>
-                        <p></p>
-                        <div>
-                            <button></button>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </article>
-                </div>
-                <div>
-                    <article>
-                        <img src="" alt="">
-                    </article>
-                    <article>
-                        <h2></h2>
-                        <div>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </article>
-                </div>
-                <div>
-                    <article>
-                        <img src="" alt="">
-                    </article>
-                    <article>
-                        <h2></h2>
-                        <h2></h2>
-                        <div>
-                            <button></button>
-                            <button></button>
-                        </div>
-                    </article>
-                </div>
-            </section>
+            <div id="app">
+                <section class="container-left">
+                    <div class="button-play-playlist">
+                        <h2>Play this playlist</h2>
+                    </div>
+                    <div class="container-music">
+                        <article>
+                            <img class="img-album" src="./assets/image/Sounding the seventh trumpet.jpg" alt="">
+                        </article>
+                        <article class="container-itens-info">
+                            <h2>Sounding the seventh trumpet</h2>
+                            <p>hear the music in <br><a
+                                    href="https://www.youtube.com/watch?v=epiitWVmMyw">https://www.youtube.com/watch?v=epiitWVmMyw</a>
+                            </p>
+                            <div class="container-buttons">
+                                <button class="box-button">
+                                    <img src="./assets/image/play.png" alt="">
+                                    <h1>PLAY</h1>
+                                </button>
+                                <button class="button-info">INFO</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="container-music">
+                        <article>
+                            <img class="img-album" src="./assets/image/Nightmare.jpg" alt="">
+                        </article>
+                        <article class="container-itens-info">
+                            <h2>Nightmare</h2>
+                            <p>Rock</p>
+                            <div class="container-buttons">
+                                <button class="box-button">
+                                    <img src="./assets/image/play.png" alt="">
+                                    <h1>PLAY</h1>
+                                </button>
+                                <button class="button-info">INFO</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="container-music">
+                        <article>
+                            <img class="img-album" src="./assets/image/walking the fallen.jpg" alt="">
+                        </article>
+                        <article class="container-itens-info">
+                            <h2>Walking the fallen</h2>
+                            <p>Hot mix collection</p>
+                            <button class="box-button only-one-button">
+                                <img src="./assets/image/play.png" alt="">
+                                <h1>PLAY</h1>
+                            </button>
+                        </article>
+                    </div>
+                </section>
+                <section class="container-right">
+                    <div class="container-music">
+                        <article>
+                            <img class="img-album" src="./assets/image/Hail to the king.jpg" alt="">
+                        </article>
+                        <article class="container-itens-info">
+                            <h2>Hail to the king</h2>
+                            <p>First track</p>
+                            <div class="container-buttons">
+                                <button class="box-button">
+                                    <img src="./assets/image/pause.png" alt="" height="20px">
+                                    <h1>PAUSE</h1>
+                                </button>
+                                <button class="box-button" style="font-size: 12px; padding-left: 7px;">
+                                    <img src="./assets/image/simbolo-de-interface-de-lista.png" alt="" height="10px">
+                                    <h1>ENQEUE</h1>
+                                </button>
+                                <button class="button-info">INFO</button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="container-music">
+                        <article>
+                            <img class="img-album" src="./assets/image/avengeda.jpg" alt="">
+                        </article>
+                        <article class="container-itens-info">
+                            <h2>Avenged sevenfold</h2>
+                            <div class="container-buttons" style="margin-top: 10px;">
+                                <button class="box-button">
+                                    <img src="./assets/image/play.png" alt="">
+                                    <h1>PLAY</h1>
+                                </button>
+                                <button class="box-button" style="font-size: 12px; padding-left: 7px;">
+                                    <img src="./assets/image/simbolo-de-interface-de-lista.png" alt="" height="10px">
+                                    <h1>ENQEUE</h1>
+                                </button>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="container-music">
+                        <article>
+                            <img class="img-album" src="./assets/image/City of evil.jpg" alt="">
+                        </article>
+                        <article class="container-itens-info">
+                            <h2>City of evil</h2>
+                            <h2>[The best song!]</h2>
+                            <div class="container-buttons">
+                                <button class="box-button">
+                                    <img src="./assets/image/play.png" alt="">
+                                    <h1>PLAY</h1>
+                                </button>
+                                <button class="box-button" style="font-size: 12px; padding-left: 7px;">
+                                    <img src="./assets/image/simbolo-de-interface-de-lista.png" alt="" height="10px">
+                                    <h1>ENQEUE</h1>
+                                </button>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+            </div>
         </main>
         <footer>
-            <section>
+            <section class="container-footer-itens-left">
                 <div>
-                    <img src="" alt="">
+                    <img class="img-music-current" src="./assets/image/Hail to the king.jpg" alt="">
                 </div>
-                <div>
-                    <h2></h2>
-                    <p></p>
-                    <article>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                <div class="information-of-music-current">
+                    <h2>Hail to de king</h2>
+                    <p>First track</p>
+                    <article class="last-items-footer-left">
+                        <p>Share in facebook</p>
+                        <p>Share in twitter</p>
+                        <div class="wrapper-sound">
+                            <img src="./assets/image/sound.png" alt="" height="20px" width="20px">
+                            <p>soundcloud</p>
+                        </div>
                     </article>
                 </div>
             </section>
-            <section>
-                <div>
+            <section class="items-footer-right">
+                <div class="items-footer-right-top">
                     <article>
-                        icons
+                        <img src="./assets/image/rewind-button.png" alt="" height="20px">
+                        <img src="./assets/image/pause.png" alt="" height="20px">
+                        <img src="./assets/image/forward-button.png" alt="" height="20px">
                     </article>
                     <article>
-                        volume
+                        <img src="./assets/image/progress-bar.png" alt="" height="25px" width="80px">
+                        <img src="./assets/image/sound.png" alt="" height="20px" width="20px">
                     </article>
                 </div>
                 <div>
                     <article>
-                        progress bar music
-                        icon
+                        <progress id="progresss" value="70" max="100">70 %</progress>
                     </article>
                 </div>
             </section>
